syntax = "proto3";

package system.v1;

import "core/v1/types.proto";
import "storage/v1/types.proto";

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/system/v1";

message PingRequest {}

message PingResponse {
  string message = 1;
  core.v1.PingResponse core_ping = 2;
  storage.v1.PingResponse storage_ping = 3;
}

message GetHealthRequest {}

message GetHealthResponse {
  string status = 1;
  core.v1.GetHealthResponse core_health = 2;
  storage.v1.GetHealthResponse storage_health = 3;
}
